# ChangeLog for dev-python/prettytable
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  13 Sep 2011; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  QA: Whitespace fix.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  Keyworded x86.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com> prettytable-0.5.ebuild:
  Keyworded ~x86.

  01 Jul 2011; James Rowe <jnrowe@gmail.com> watch:
  Fixed cupage entry.

*prettytable-0.5 (01 Jul 2011)

  01 Jul 2011; James Rowe <jnrowe@gmail.com> +prettytable-0.5.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me. Required by termtool [387].
