@@ -2,10 +2,11 @@
 Hash: SHA512
 
 DIST prettytable-0.5.tar.gz 6101 RMD160 7843bf72243da43287caecdaa1956d80b7372ffd SHA1 81a4746d9974d07af21d840ab01c636941ad771c SHA256 52dbc76b9fdc53f6386ce9380a93653dbff20717296605449b86a73f426b7d8b
+DIST prettytable-0.6.tar.gz 19663 RMD160 65b0cd7eb08c3689c21a121aa3c90d1949c8a3e5 SHA1 cc8f2a607a2f0fd01024acd64e99247bd737c767 SHA256 6414f9f5ddba04fcca39f09a9852ec3585b92b67e9319ea865671044d3ed2299
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApZoACgkQzJrj3cAXR0kk5gCgmQO1HTAdKF1ze77gZpWvb5Cn
-yWcAn1VmY3omGfMaHqWfbGrmPmzw8I04
-=z2zx
+iEYEAREKAAYFAk/GibQACgkQzJrj3cAXR0lPKACfS/ts/IlqS3DdxEJK7w0VtMKN
+EyIAoJcBLUEIlTC6jQaZ4q0mYn51ZL7s
+=DyQk
 -----END PGP SIGNATURE-----
