@@ -363,6 +363,7 @@
  * Versions:
 
   * `0.5 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/prettytable/prettytable-0.5.ebuild>`__  ``amd64``, ``x86``
+  * `0.6 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-python/prettytable/prettytable-0.6.ebuild>`__  ``~amd64`` (due 2012-06-29), ``~x86`` (due 2012-06-29)
 
 * ``pwtools`` - http://alastairs-place.net/projects/pwtools/
 
