@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=!<sys-apps/portage-2.1.10.58 python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_2? ( dev-lang/python:3.2 )
+DESCRIPTION=Display tabular data in a visually appealing ASCII table
+EAPI=4
+HOMEPAGE=http://code.google.com/p/prettytable/
+IUSE=python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_2
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD
+RDEPEND=python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_2? ( dev-lang/python:3.2 )
+REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 )
+SLOT=0
+SRC_URI=mirror://pypi/P/PrettyTable/prettytable-0.6.tar.gz
+_eclasses_=python-distutils-ng	9649998e4ceeb56a6745cc819dbafcb6
+_md5_=5a2a0d8b0e2c5f9b959eaedbbeae177d
